fix(analytics/tables): [PLTDA-2595] Tables first columns shadow on scroll (#4716)
* fix(analytics/tables): [PLTDA-2595] table first columns shadow on scroll fix

* fix(analytics/tables): [PLTDA-2595] using TruncateCellContent in the main column of Channels table

* fix(analytics/tables): [PLTDA-2595] change TruncateCellContent default truncate side to right

* fix(analytics/tables): [PLTDA-2595] remove eslint warning

--- a/src/pages/stats/AgentsTable.less
+++ b/src/pages/stats/AgentsTable.less
@@ -103,7 +103,6 @@
     .BodyCell,
     .BodyCellContent {
         cursor: auto;
-        overflow: hidden;
     }
 
     .emptyValue {
